--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="http://huangxuan.me">Hux Blog</a> |
+                    Powered by <a href="http://huangxuan.me">itwangwh Blog</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
+                        src="https://ghbtns.com/github-btn.html?user=itwangwh&repo=itwangwh.github.io&type=star&count=true">
                     </iframe>
                 </p>
             </div>
@@ -118,7 +118,7 @@
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
 <script>
-    // dynamic User by Hux
+    // dynamic User by itwangwh
     var _gaId = '{{ site.ga_track_id }}';
     var _gaDomain = '{{ site.ga_domain }}';
 
@@ -139,7 +139,7 @@
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
 <script>
-    // dynamic User by Hux
+    // dynamic User by itwangwh
     var _baId = '{{ site.ba_track_id }}';
 
     // Originial
